typed/clj.checker/test/clojure/core/typed/test/fail/unannotated_record.clj
(ns ^:typed.clojure clojure.core.typed.test.fail.unannotated-record
  (:require [typed.clojure :as t]))

;Should throw a top level type error
(defrecord Unannotated [])
